<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e4df"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/topbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@drawable/content_bg" >

            <TextView
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/user_info"
                android:textColor="#ff333333"
                android:textSize="14.0dip" />

            <RelativeLayout
                android:id="@+id/ly1"
                style="@style/item_bg_top_layout"
                android:layout_below="@id/user_info" >

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24.0dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/name"
                    android:textColor="#ff333333"
                    android:textSize="13.0dip" />

                <TextView
                    android:id="@+id/name"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@id/name_text"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/name_text"
                    android:layout_marginRight="24.0dip"
                    android:text="@string/none_user"
                    android:textColor="#CC6600"
                    android:textSize="13.0dip" />
            </RelativeLayout>

            <View
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_below="@id/ly1"
                android:background="@drawable/item_shape_line" />

            <RelativeLayout
                android:id="@+id/ly2"
                style="@style/item_bg_mid_layout"
                android:layout_below="@id/l1" >

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24.0dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/password"
                    android:textColor="#ff333333"
                    android:textSize="13.0dip" />
                

                <Button
                    android:id="@+id/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@id/password"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/password"
                    android:layout_marginRight="13.0dip"
                    android:background="@drawable/btn"
                    android:gravity="center"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/changePass"
                    android:textSize="13.0dip" />
                 <TextView
                    android:id="@+id/msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24.0dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:layout_toLeftOf="@id/change_password"
                    android:textColor="#CC0033"
                    android:textSize="13.0dip" />
            </RelativeLayout>

            <View
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_below="@id/ly2"
                android:background="@drawable/item_shape_line" />

            <RelativeLayout
                android:id="@+id/ly3"
                style="@style/item_bg_bottom_layout"
                android:layout_below="@id/l2" >

                <TextView
                    android:id="@+id/current_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24.0dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/login_state"
                    android:textColor="#ff333333"
                    android:textSize="13.0dip" />

                <TextView
                    android:id="@+id/state"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@id/current_state"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/current_state"
                    android:layout_marginRight="24.0dip"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/unlogin"
                    android:textColor="#CC6600"
                    android:textSize="13.0dip" />
            </RelativeLayout>
             <View
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_below="@id/ly3"
                android:background="@drawable/item_shape_line" />

            <RelativeLayout
                android:id="@+id/ly4"
                style="@style/item_bg_bottom_layout"
                android:layout_below="@id/l3" >

                <TextView
                    android:id="@+id/receive_state_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24.0dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/receive_state"
                    android:textColor="#ff333333"
                    android:textSize="13.0dip" />

                <TextView
                    android:id="@+id/receive_state"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@id/receive_state_text"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/receive_state_text"
                    android:layout_marginRight="24.0dip"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp"
                    android:text="@string/stop_receive"
                    android:textColor="#CC6600"
                    android:textSize="13.0dip" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>