<?xml version="1.0" encoding="utf-8"?>
<!-- listview的item选项 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#e7e4df"
    android:orientation="vertical"
    android:padding="0dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/content_bg"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:hint="@string/set_password"
            android:textColor="#CC0033" />

        <EditText
            android:id="@+id/old"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/msg"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/old_password"
            android:inputType="text"
            android:paddingBottom="1dp"
            android:paddingLeft="10dp"
            android:paddingTop="1dp"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignLeft="@id/old"
            android:layout_below="@id/old"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingBottom="1dp"
            android:paddingLeft="10dp"
            android:paddingTop="1dp"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/comfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignLeft="@id/old"
            android:layout_below="@id/newpassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/comfirm_password"
            android:inputType="textPassword"
            android:paddingBottom="1dp"
            android:paddingLeft="10dp"
            android:paddingTop="1dp"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
        <!--
  <Button
            android:id="@+id/modify"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/comfirmpassword"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/login"
            android:textColor="@android:color/black"
             android:background="@drawable/btn"
            android:textSize="15sp" />

        <Button
            android:id="@+id/enter_direct"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/comfirmpassword"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/enter_history"
            android:textColor="@android:color/black"
             android:background="@drawable/btn"
            android:textSize="15sp" />
        -->
    </RelativeLayout>

</LinearLayout>