<?xml version="1.0" encoding="utf-8"?>
<!-- listview的item选项 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/login_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/item_icon"
        android:layout_below="@id/content_title"
        android:layout_toRightOf="@id/item_icon"
        android:paddingRight="5dp"
        android:text="@string/name"
        android:textColor="@android:color/darker_gray"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/login_name"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_alignTop="@id/item_icon"
        android:layout_toRightOf="@id/login_name_text"
        android:textColor="@android:color/darker_gray"
        android:inputType="text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/login_name_text"
        android:layout_alignRight="@id/login_name_text"
        android:layout_below="@id/login_name_text"
        android:layout_marginTop="10dp"
        android:paddingRight="5dp"
        android:text="@string/password"
        android:textColor="@android:color/darker_gray"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@id/login_name"
        android:layout_alignTop="@id/item_icon"
        android:layout_below="@id/login_name_text"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/password_text"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />
     <TextView 
        android:id="@+id/keep_info_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="保存登录信息"
        android:gravity="center_vertical"
        android:layout_below="@id/password_text"
        android:layout_marginTop="10dp"
        />
    <CheckBox 
        android:id="@+id/keep_info"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/password_text"
        android:layout_toRightOf="@id/keep_info_text"
        android:layout_marginTop="10dp"
        
        />
    <Button 
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_below="@id/keep_info_text"
        android:layout_alignLeft="@id/password_text"
        android:layout_alignRight="@id/password"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        />
     <TextView 
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:layout_below="@id/login"
        android:textColor="#CC0033"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>