<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e4df"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/topbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@drawable/content_bg" >

            <TextView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/car_alarm_setting"
                android:textColor="#ff333333"
                android:textSize="14.0dip" />

            <RelativeLayout
                android:id="@+id/ly1"
                style="@style/item_bg_top_layout"
                android:layout_below="@id/setting" >

                <TextView
                    android:id="@+id/car_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/car_alarm_in"
                    android:textColor="#ff333333"
                    android:textSize="12.0dip" />

                <CheckBox
                    android:id="@+id/opt1_car_in"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@id/car_opt1"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/car_opt1"
                    android:layout_marginRight="12.0dip" />
            </RelativeLayout>

            <View
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_below="@id/ly1"
                android:background="@drawable/item_shape_line" />

            <RelativeLayout
                android:id="@+id/ly2"
                style="@style/item_bg_bottom_layout"
                android:layout_below="@id/l1" >

                <TextView
                    android:id="@+id/car_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/car_alarm_out"
                    android:textColor="#ff333333"
                    android:textSize="12.0dip" />

                <CheckBox
                    android:id="@+id/opt1_car_out"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@id/car_out"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/car_out"
                    android:layout_marginRight="12.0dip" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>